// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

kxen upgrade [target]

upgrade kxen to the latest or a specific version

Positionals:
  target  branch, tag or commit to check out (default: fast-forward main)                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         source directory (default: repository of the running CLI)               [string]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

kxen serve

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

kxen web

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"                  
█ ▄▀ █ █ █▀▀ █▀▀▄
█▀▄  ▄▀▄ █▀▀ █  █
▀  ▀ ▀ ▀ ▀▀▀ ▀  ▀

Commands:
  kxen start             start kxen daemon and web interface                               [default]
  kxen stop              stop kxen daemon and web interface
  kxen doctor            check kxen environment health
  kxen upgrade [target]  upgrade kxen to the latest or a specific version

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --serve-port                                                          [number] [default: 4096]
      --web-port                                                            [number] [default: 3000]
"
`;
